# snar-qc

./: .gitattributes  .gitignore  CITATION.cff  CLAUDE.md  LICENSE  NOTICE  README.md  environment-gpu.yml  environment.yml  pyproject.toml
assets/amine_ref/: CN__b3lyp-d3bj_def2-svp__gpu4pyscf.json  CN__b3lyp-d3bj_def2-svp__gpu4pyscf.xyz  CN__b3lyp-d3bj_def2-svp__psi4.json  CN__b3lyp-d3bj_def2-svp__psi4.xyz  README.md
docs/: extract_gas_cache.md  runbook_realpool_qc.md  runbook_resume_and_thermal.md  runbook_solvated_validation.md  scientific_context.md  sop_snar_deltag.md
notes/: 2026-06-21_poc_deltag_validation.md  2026-06-23_gpu_hessian_benchmark.md  2026-06-23_solvent_freq_pcm_singlepoint.md  2026-06-24_dmso_recalc_lu74_arylators.md  2026-06-24_gpu_failed_recheck_smoke.md  2026-06-24_gpu_stage_e_campaign_runbook.md  2026-06-24_gpu_stage_e_unblock.md  2026-06-25_gpu_dmso_campaign_runbook.md  2026-06-26_gpu_dmso_solvent_model_comparison.md  2026-06-28_lu74_full_deltag_analysis.md
notes/assets/: poc_validation_stats.json
notes/assets/comparison/: gpu_model_summary.json
notes/assets/cpu_dmso/: README.md  poc_validation_join.csv
notes/assets/cpu_gas/: README.md  poc_validation_join.csv
notes/assets/cpu_geom_smd/: README.md  poc_validation_join.csv  poc_validation_stats.json
notes/assets/gpu_dmso_iefpcm/: README.md  poc_validation_join.csv  poc_validation_stats.json
notes/assets/gpu_dmso_smd/: README.md  poc_validation_join.csv  poc_validation_stats.json
notes/assets/gpu_gas/: README.md  poc_validation_join.csv  poc_validation_stats.json
notes/assets/gpu_stage_e/: README.md  poc_validation_join.csv  poc_validation_stats.json
notes/assets/united_model/: README.md  united_model_join.csv  united_model_stats.json
plans/: 2026-06-21_predict_snar_adoption.md  2026-06-22_solvation_revalidation.md
plans/2026-06-23_gpu4pyscf_backend/: User_Instructions.md  masterplan.md  prompt_01_SinglePoint.md  prompt_02_GradientMinOpt.md  prompt_03_HessianThermo.md  prompt_04_TSOpt.md  prompt_05_Revalidation.md
plans/archive/: 2026-06-21_predict_snar_adoption.md
scripts/: build_realpool_slice.py  extract_amine_ref.py  extract_gas_cache.py  fit_united_model.py  run_poc.py  run_poc_batch.sh  run_qc_queue.py  run_solvated_validation.ps1  run_solvated_validation.sh  sweep_solvent.py  thermal_run.py  validate_poc.py
src/data/agents/: lewis_acids.pickle  strong_acids.pickle  strong_bases.pickle  weak_acids.pickle  weak_bases.pickle
src/data/solvent/: epsilon_h.pickle  xtb_solvents.pickle
src/predict_snar/: LICENSE  VENDORED.md  __main__.py  calculators.py  config.py  data.py  descriptors.py  helpers.py  jobs.py  legacy_code.py  parsers.py  results.py  script_create_config.py  script_gsm.py  script_smiles.py  smiles.py
src/snar_qc/: __init__.py
src/snar_qc/poc/: __init__.py  amine_cache.py  barrier.py  complex.py  worker.py
src/snar_qc/qc/: __init__.py  backend.py  bond_orders.py  gpu4pyscf_calculator.py  psi4_calculator.py  thermo.py
src/snar_qc/ts/: __init__.py  psi4_tsscan.py
tests/: test_amine_cache.py  test_backend.py  test_bond_orders.py  test_build_realpool_slice.py  test_fit_united_model.py  test_gpu4pyscf_calculator.py  test_poc_barrier.py  test_poc_complex.py  test_psi4_calculator.py  test_psi4_tsscan.py  test_qc_queue.py  test_thermo.py  test_worker.py
